[package]
name = "pwatch"
version = "0.1.0"
authors = ["Vladimir Markelov <vmatroskin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo=">=0.14"
crossterm = ">=0.12"
unicode-width = ">=0.1.5"
simplelog = ">=0.7"
log = "^0.4.0"
getopts = ">=0.2"
regex = "^1.0"
atty = ">=0.2"